public class GlobalStringVars 
{
    #region Movement

    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
    public const string JUMP = "Jump";
    public const string FIRE_1 = "Fire1";

    #endregion

    #region Animation

    public const string IS_ATTACKING = "isAttacking";
    public const string IS_SHOOTING= "isShooting";
    public const string IS_JUMPING = "isJumping";
    public const string IS_HURT = "isHurt";
    public const string IS_DEAD = "isDead";
    public const string IS_MOVING = "isMoving";
    public const string IS_FALLING = "isFalling";
    public const string IS_DASHING = "isDashing";

    #endregion
}
